--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -11,6 +11,10 @@
      -fx-alignment: top-center;
      -fx-background-color: #000000;
  }
+.label-vastus{
+    -fx-padding: 30;
+}
+
 .grid-pane {
     -fx-hgap: 10;
     -fx-vgap: 10;
